--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,10 +6,28 @@
     list-style: none;
 }
 
-.container{
+.container {
     max-width: 1345px;
     margin: 0 auto;
     padding: 0 15px;
     height: 100%;
     width: 100%;
+}
+
+.btn {
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    color: #6F6F64;
+    background: transparent;
+    border: 2px solid #6F6F64;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background: #6F6F64;
+    color: white;
+    border: 2px solid #6F6F64;
 }
